[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Fonts/TextBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Layers/LayerConfiguration/Misc/GeodataChooser.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Layers/LayerConfiguration/SpecificLayerUI/PolygonLayer.gd" type="Script" id=3]
[ext_resource path="res://UI/Layers/LayerConfiguration/Misc/AttributeDropDown.tscn" type="PackedScene" id=4]

[node name="PolygonLayer" type="HSplitContainer"]
margin_right = 1024.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="."]
margin_right = 272.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="LeftBox"]
margin_right = 272.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Title" type="Label" parent="LeftBox/Title"]
margin_right = 272.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
text = "Polygon-Layer"

[node name="HSeparator" type="HSeparator" parent="LeftBox/Title"]
margin_top = 31.0
margin_right = 272.0
margin_bottom = 39.0

[node name="Polygons" type="Label" parent="LeftBox"]
margin_top = 58.0
margin_right = 272.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 85 )
text = "Polygon-data:"

[node name="GroundHeight" type="Label" parent="LeftBox"]
margin_top = 151.0
margin_right = 272.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 85 )
text = "Ground-Height-data:"

[node name="HeightAttrib" type="Label" parent="LeftBox"]
margin_top = 244.0
margin_right = 272.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 40 )
text = "Height Attribute:"

[node name="Extend" type="Label" parent="LeftBox"]
margin_top = 292.0
margin_right = 272.0
margin_bottom = 317.0
text = "Extend as Building-Layer:"

[node name="BuildingInfo" type="VBoxContainer" parent="LeftBox"]
visible = false
margin_top = 325.0
margin_right = 272.0
margin_bottom = 325.0

[node name="HeightStdAttrib" type="Label" parent="LeftBox/BuildingInfo"]
margin_top = 8.0
margin_right = 272.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
text = "Height Stdev Attribute:"

[node name="SlopeAttrib" type="Label" parent="LeftBox/BuildingInfo"]
margin_top = 56.0
margin_right = 272.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 40 )
text = "Slope Attribute:"

[node name="RedAttrib" type="Label" parent="LeftBox/BuildingInfo"]
margin_top = 104.0
margin_right = 272.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 40 )
text = "Red Attribute:"

[node name="GreenAttrib" type="Label" parent="LeftBox/BuildingInfo"]
margin_top = 152.0
margin_right = 272.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 40 )
text = "Green Attribute:"

[node name="BlueAttrib" type="Label" parent="LeftBox/BuildingInfo"]
margin_top = 200.0
margin_right = 272.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 40 )
text = "Blue Attribute:"

[node name="RightBox" type="VBoxContainer" parent="."]
margin_left = 296.0
margin_right = 1024.0
margin_bottom = 340.0

[node name="Spacer" type="Control" parent="RightBox"]
margin_right = 728.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="PolygonChooser" parent="RightBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 728.0
margin_bottom = 143.0
show_raster_layers = false

[node name="GroundHeightChooser" parent="RightBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 151.0
margin_right = 728.0
margin_bottom = 236.0
show_feature_layer = false

[node name="HeightAttrDD" parent="RightBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 244.0
margin_right = 728.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 40 )

[node name="BuildingCheckBox" type="CheckBox" parent="RightBox"]
margin_top = 292.0
margin_right = 728.0
margin_bottom = 340.0

[node name="BuildingInfo" type="VBoxContainer" parent="RightBox"]
visible = false
margin_top = 348.0
margin_right = 728.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeightStdAttrDD" parent="RightBox/BuildingInfo" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 728.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="SlopeAttrDD" parent="RightBox/BuildingInfo" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 728.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 40 )

[node name="RedAttrDD" parent="RightBox/BuildingInfo" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 728.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 40 )

[node name="GreenAttrDD" parent="RightBox/BuildingInfo" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 728.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 40 )

[node name="BlueAttrDD" parent="RightBox/BuildingInfo" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 728.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 40 )
